@@ -4,3 +4,5 @@ SOURCE activity.sql
 SOURCE operation.sql
 SOURCE role_has_operation.sql
 SOURCE operation2.sql
+SOURCE participant.sql
+SOURCE queue.sql
